
0.10.2f June 09, 2010
 * Updated API, generalizing several types into slapt_list_t
 * added reinstall notification

0.10.2e June 02, 2010
 * updated essential packages for dist-upgrade
 * always reinstall slapt-get on dist-upgrade
 * translations cleanup
 * FAQ updates

0.10.2d Mar 07, 2010
 * gpgme now requires gpgme_check_version () for initialization
 * define _FILE_OFFSET_BITS prior to including gpgme.h as required
   by gpgme in -current
 * incorporated a modified version of the patch submitted by
   Vitaly Chernookiy for making slapt-get cross compile friendly
 * removed extraneous / when constructing package source url

0.10.2c Jan 10, 2010
 * ignore the location for installed packages as they do not have any
   real meaning and end up confusing the user.
 * fixed missing configuration option copying from the initial config
   to the final configuration.  --remove-obsolete and --retry were not
   being honored.

0.10.2b Oct 17, 2009
 * modified disk checking mechanism so that the working directory filesystem
   is checked for downloads and then / is checked for the uncompressed size.
   This is not 100% ideal since /usr may be on another filestem but it should
   make Tadgy slightly happier.  Added slapt_disk_space_check to public API.

0.10.2a Sep 14, 2009
 * updated el translation from George Vlahavas
 * updated es_ES translation from Angelos
 * added --filelist option using slapt_get_pkg_filelist
 * added slapt_get_pkg_filelist() from Anders F. Bjorklund
 * normalize search routine when doing package lookups by details instead
   of just name and version.  This fixes a bug in gslapt that causes the
   package lookup to fail for two similar packages.

0.10.2 Aug 15, 2009
 * do not exit immediately if we cannot open the default slapt-getrc, check
   instead if --config was used, otherwise exit (thanks Vasileios Porpodas)
 * for consistency error out when --install is passed a package that
   does not exist (George)