@@ -292,6 +292,9 @@ The following functions deal with determining package dependencies and conflicts
 .B "struct slapt_pkg_list *"
 .B "slapt_is_required_by(const slapt_rc_config *global_config,
 .B "                     struct slapt_pkg_list *avail,
+.B "                     struct slapt_pkg_list *installed_pkgs,
+.B "                     struct slapt_pkg_list *pkgs_to_install,
+.B "                     struct slapt_pkg_list *pkgs_to_remove,
 .B "                     slapt_pkg_info_t *pkg);"
 .sp
 .fi
